# grunt

./: .gitignore  README.md
grunt_analysis/: .gitignore  README.md  pyproject.toml
grunt_analysis/grunt_analysis/: __init__.py  _deep_common.py  arcos.py  bag.py  cli.py  costmap_render.py  geo.py  mcap_recover.py  metrics.py  onsets.py  planner_audit.py  segdev.py  self_filter_cal.py  traversability.py  viz.py
grunt_analysis/scripts/: analyze_arcos.py  analyze_mission.py  analyze_onsets.py  analyze_planner.py  analyze_segments.py  analyze_traversability.py  render_costmaps.py
grunt_analysis/tests/: test_geo.py
grunt_bringup/: CMakeLists.txt  package.xml
grunt_bringup/config/: bno055_params.yaml  dds.sh  ekf_global.yaml  ekf_local.yaml  fastrtps_profiles.xml  global_settings.yaml  groundgrid_l2.yaml  grunt_l2_params.yaml  nav2_outdoor_params.yaml  navsat_transform.yaml  twist_mux.yaml  zed_f9p.yaml
grunt_bringup/launch/: barney4square_launch.py  barney_quicktrip_launch.py  bno055.launch.py  depthcam.launch.py  describe.with.arm.py  gps.rtk.launch.py  groundgrid_replay.launch.py  grunt.launch.py  grunt.quiet.launch.py  grunt_l2.launch.py  joy_launch.py  localization.launch.py  nav2.launch.py  roarm_attach_launch.py  roarm_launch.py  rs.depth.points.launch.py  rs_launch.py  rtabmap.icp.odom.launch.py  rtabmap.pc.only.launch.py  teleop_joy_launch.py  teleop_launch.py  test_global_ekf.launch.py
grunt_bringup/scripts/: add_interstitials  arcos_bench_test.sh  costmap_snapshot  diagnostic_bagger  groundgrid_bag  grunt_health  joy_estop  kml_import  l2_ground_filter  l2_self_filter  localization_supervisor  mission_overlay  navpvt_to_imu  play_latest_mission  pmtu6.sh  system_metrics  usb_sentinel  waypoint_recorder  zt_linklog.py  zt_pathcheck.py
grunt_bringup/systemd/: README.md  grunt-wifi-on.service  grunt-zt-linklog.service  install-grunt-wifi-on.sh  install-grunt-zt-linklog.sh  wifi_selftest.sh
grunt_description/: CMakeLists.txt  package.xml
grunt_description/config/: controllers.yaml
grunt_description/meshes/: mast_trapezoid.stl  unitreeL2.stl
grunt_description/urdf/: macros.xacro  mast.xacro
grunt_description/urdf/realsense_d455/: _d455.urdf.xacro  realsense_camera_on_gripper.xacro
grunt_nav/: CMakeLists.txt  package.xml
grunt_nav/behavior_trees/: navigate_to_pose_indoor.xml
grunt_nav/config/: nav2_indoor.yaml  nav2_outdoor.yaml
grunt_nav/launch/: nav.launch.py  nav_indoor.launch.py  nav_outdoor.launch.py  nav_standalone.launch.py
grunt_nav/scripts/: clear_costmap_timer  nav_mode_switcher
grunt_util/: CMakeLists.txt  package.xml
grunt_util/arm/: arm_preset_publisher.py
grunt_util/imu/: heading_test.py
grunt_util/launch/: arm.preset.launch.py  test.arm.preset.launch.py
install/: grunt_install.sh  grunt_udev_rules.sh
install/autostart/: grunt-nav-sudoers  grunt-nav@.service  grunt-set-property  grunt-set-site  grunt-start-nav-mode  grunt.service  grunt_park_and_stop.sh  test_restart_cycles.sh  usb_sentinel.service  vizanti.service
