<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grunt_bringup</name>
  <version>0.0.0</version>
  <description>Bring up a grunt-based robot</description>
  <maintainer email="karim@compuguru.com">karim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>p2os_driver</exec_depend>
  <exec_depend>p2os_msgs</exec_depend>
  <exec_depend>p2os_urdf</exec_depend>
  <exec_depend>p2os_teleop</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>bno055</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>grunt_behaviors</exec_depend>
  <exec_depend>isr_wifi</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
